syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.refactortask.grpc";

package com.example.refactortask;

service ProductService {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(ProductRequest) returns (DeleteResponse);
}

message ProductRequest {
  int64 id = 1;
}

message ListProductsRequest {
  // Empty request
}

message CreateProductRequest {
  string product_name = 1;
  string description = 2;
  double product_price = 3;
  int32 stock_quantity = 4;
  int64 category_id = 5;
}

message UpdateProductRequest {
  int64 id = 1;
  string product_name = 2;
  string description = 3;
  double product_price = 4;
  int32 stock_quantity = 5;
  int64 category_id = 6;
}

message ProductResponse {
  int64 id = 1;
  string product_name = 2;
  string description = 3;
  double product_price = 4;
  int32 stock_quantity = 5;
  int64 category_id = 6;
  string created_at = 7;
  string updated_at = 8;
  bool is_in_stock = 9;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}